--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <script src="js/jquery.countdown.min.js"></script>
   <script src="js/particles.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/jquery.ripples-min.js"></script>
 
   <!-- main JS -->
   <script src="js/main.js"></script>
